// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text Set to disabled 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  background-color: #ffffff;
  padding: 16px;
  margin: 16px;
}

.c3 {
  background-color: #00438f;
  padding: 16px;
  margin: 16px;
}

.c5 {
  background-color: #011e38;
  padding: 16px;
  margin: 16px;
}

.c2 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
  opacity: 0.3333;
}

.c4 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: #ffffff;
  opacity: 0.3333;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <p
        className="c2"
        color="currentColor"
        disabled={true}
        fontSize="medium"
      >
        Disabled text
      </p>
    </div>
    <div
      className="c3"
    >
      <p
        className="c4"
        color="white"
        disabled={true}
        fontSize="medium"
      >
        Disabled text
      </p>
    </div>
    <div
      className="c5"
    >
      <p
        className="c4"
        color="white"
        disabled={true}
        fontSize="medium"
      >
        Disabled text
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Set to inline 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <span
      className="c1"
      color="currentColor"
      disabled={false}
      fontSize="medium"
    >
      Inline text
    </span>
    <span
      className="c2"
      color="currentColor"
      disabled={false}
      fontSize="medium"
    >
      Inline text
    </span>
  </div>
</div>
`;

exports[`Storyshots Text Text 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <p
      className="c1"
      color="currentColor"
      disabled={false}
      fontSize="medium"
    >
      Default text
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a color 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: #216beb;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <p
      className="c1"
      color="blue"
      disabled={false}
      fontSize="medium"
    >
      Blue text
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a custom margin 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  margin-bottom: 24px;
  margin-top: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <p
      className="c1"
      color="currentColor"
      disabled={false}
      fontSize="medium"
    >
      Text 24px bottom margin.
    </p>
    <p
      className="c2"
      color="currentColor"
      disabled={false}
      fontSize="medium"
    >
      Text with default (0px) bottom margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a size 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  background-color: #f0f2f5;
  padding: 16px;
  margin-bottom: 24px;
}

.c2 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c3 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 14px;
  line-height: 1.71428571;
  color: currentColor;
}

.c4 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 14px;
  line-height: 1.14285714;
  color: currentColor;
}

.c5 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 12px;
  line-height: 1.33333333;
  color: currentColor;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <p
        className="c2"
        color="currentColor"
        disabled={false}
        fontSize="medium"
      >
        Default (16px/24px)
      </p>
    </div>
    <div
      className="c1"
    >
      <p
        className="c3"
        color="currentColor"
        disabled={false}
        fontSize="small"
      >
        Small (14px/24px)
      </p>
      <p
        className="c4"
        color="currentColor"
        disabled={false}
        fontSize="small"
      >
        Small Compressed (14px/16px)
      </p>
    </div>
    <div
      className="c1"
    >
      <p
        className="c5"
        color="currentColor"
        disabled={false}
        fontSize="smaller"
      >
        Smaller (12px/16px)
      </p>
    </div>
  </div>
</div>
`;
